@@ -45,10 +45,12 @@ END
 
 STRINGTABLE
 BEGIN
-  IDS_STAT_NUM_IN_DB      "00000 items"
+  IDS_STAT_NUM_IN_DB      " "
   IDS_READ_ONLY           "R/O"
   IDS_MODIFIED            " "
   IDS_CONFIG_BLANK        " "
+  IDS_CLIPBOARDACTION     "%s copied at %02d:%02d"
+  IDS_CLIPBOARDCLEARED    "Cleared at %02d:%02d"
 END
 
 // Tooltips
@@ -114,7 +116,7 @@ BEGIN
   IDS_FILEOPEN            "File open error."
   IDS_SAFENOTEXIST        "\n\nCannot open database. It probably does not exist.\nA new database will be created."
   IDS_SAVECHANGES         "Do you wish to save the changes made to database:\r\n\r\n%s\r\n\r\nor Cancel the shutdown\\restart\\logoff?"
-  IDS_NUMITEMS            "%5d items"
+  IDS_NUMITEMS            "%d items"
   IDS_NEVER               "Never"
   IDS_HIDDENNOTES         "[Notes hidden - click here to display]"
   IDS_SHOWPASSWORDTXT1    "S"
